--- a/test/Elastic.Apm.DockerTests/Elastic.Apm.DockerTests.csproj
+++ b/test/Elastic.Apm.DockerTests/Elastic.Apm.DockerTests.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 <PropertyGroup>
-  <TargetFramework>netcoreapp2.1</TargetFramework>
+  <TargetFrameworks>netcoreapp2.1,netcoreapp2.2,netcoreapp3.0,netcoreapp3.1</TargetFrameworks>
   <RootNamespace>Elastic.Apm.DockerTests</RootNamespace>
   <AssemblyName>Elastic.Apm.DockerTests</AssemblyName>
 </PropertyGroup>
