--- a/test/Elastic.Apm.PerfTests/Elastic.Apm.PerfTests.csproj
+++ b/test/Elastic.Apm.PerfTests/Elastic.Apm.PerfTests.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.4"/>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.0.19269.1"/>
   </ItemGroup>
 
   <ItemGroup>
