--- a/sample/SampleHttpSelfHostApp/App.config
+++ b/sample/SampleHttpSelfHostApp/App.config
@@ -2,9 +2,11 @@
 
 <configuration>
 	<startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+	</startup>
 	<appSettings>
-		<add key="ElasticApm:ServiceName" value="Self Host .NET Framework Sample"/>
+		<add key="ElasticApm:ServiceName" value="Self Host .NET Framework Sample" />
+		<add key="ElasticApm:CaptureBody" value="all" />
+		<add key="ElasticApm:LogLevel" value="Trace" />
 	</appSettings>
 </configuration>
