--- a/test/Elastic.Apm.EntityFramework6.Tests/Elastic.Apm.EntityFramework6.Tests.csproj
+++ b/test/Elastic.Apm.EntityFramework6.Tests/Elastic.Apm.EntityFramework6.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
     <RootNamespace>Elastic.Apm.EntityFramework6.Tests</RootNamespace>
     <AssemblyName>Elastic.Apm.EntityFramework6.Tests</AssemblyName>
+    
+    <!--See https://github.com/dotnet/sdk/issues/3329 - ran into the same problem in CI:--> 
     <GenerateErrorForMissingTargetingPacks>false</GenerateErrorForMissingTargetingPacks>
   </PropertyGroup>
 
