--- a/sample/AspNetFullFrameworkSampleApp/AspNetFullFrameworkSampleApp.csproj
+++ b/sample/AspNetFullFrameworkSampleApp/AspNetFullFrameworkSampleApp.csproj
@@ -33,6 +33,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,6 +43,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup>
     <UseIISExpress>true</UseIISExpress>
@@ -274,6 +276,11 @@
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Extensions\TempDataExtensions.cs" />
     <Compile Include="Services\Auth\ApplicationUserClaimsIdentityFactory.cs" />
+    <Compile Include="Areas\MyArea\Controllers\HomeController.cs" />
+    <Compile Include="Areas\MyArea\MyAreaRegistration.cs" />
+    <Content Include="Areas\MyArea\Views\Home\Index.cshtml" />
+    <Content Include="Areas\MyArea\Web.config" />
+    <Content Include="Areas\MyArea\_ViewStart.cshtml" />
   </ItemGroup>
   <PropertyGroup Condition="'$(OS)' == 'WINDOWS_NT'">
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -292,6 +299,13 @@
     <TypeScriptMapRoot />
     <TypeScriptSourceRoot />
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
+    <UseIISExpress>true</UseIISExpress>
+    <Use64BitIISExpress />
+    <IISExpressSSLPort />
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" Condition="'$(OS)' == 'WINDOWS_NT'" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets" Condition="'$(OS)' == 'WINDOWS_NT' AND Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets')" />
@@ -308,7 +322,9 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51565</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:51565/</IISUrl>
+          <IISUrl>http://localhost/Elastic.Apm.AspNetFullFramework.Tests.SampleApp</IISUrl>
+          <OverrideIISAppRootUrl>false</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost:51565</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
